k8s/multiple-deployments/psql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql
spec:
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      volumes:
        - name: psql-data-volume
          persistentVolumeClaim:
            claimName: psql-data-volume-claim
        - name: psql-shared-volume
          persistentVolumeClaim:
            claimName: shared-data-volume-claim
      containers:
      - name: psql
        image: postgres:13.1-alpine
        volumeMounts:
          - mountPath: "/shared"
            name: psql-shared-volume
          - mountPath: "/var/lib/postgresql/data/pgdata"
            name: psql-data-volume
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: psql-svc
spec:
  type: ClusterIP
  selector:
    app: psql
  ports:
  - port: 5432
    targetPort: 5432
