k8s/multiple-deployments/99-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    name: backend-ingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /actuator
          backend:
            service:
              name: boot-svc
              port: 
                name: boot
